test: add table and dialog tests

--- a/simple-todo-list/tsconfig.json
+++ b/simple-todo-list/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "types": ["@testing-library/jest-dom"],
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
